--- a/CSS/style.css
+++ b/CSS/style.css
@@ -378,7 +378,7 @@ a {
     background-color: #D9D9D9;
     border-radius: 20px;
     margin: 25px;
-    height: 48px;
+    height: auto;
 
 }
 .ul_header {
@@ -402,96 +402,36 @@ a {
     text-decoration: underline;
     transform: scale(1.15);
 }
-/* Section presentation */
 
-.presentation{
-    padding: 20px 68px ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* height: 850px; */
-}
-
-
-img{
-    border-radius: 150px;
-    border: solid 3px #777676;
-    width: 300px;
-    height: 300px;
-    display: flex;
-    text-align:center ;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    transform-origin: center center;
-    animation: image 1s both ;
-}
-
-
-@keyframes image {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    transform: rotate(1turn);
-  }
-}
-
-.presentation p{
-    text-align: justify;
-    font-size: 27px;
-    color : #D9D9D9;
-
-}
-
-cite{
-    text-align:right ;
-    font-family: 'Island Moments', cursive;
-    color: #E57F08;
-    font-style: Regular;
-    font-size: 72px;
-    line-height: 55px;
-}
-
-
-nav {
-    margin: 25px;
-    height: 210px;
-
-}
-ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding-top: 10px;
-
-}
-.li_presentation{
-
-    background-color: #D9D9D9;
-    width: 180px;
-    height: 180px;
-    border-radius: 100px;
-    list-style: none;
-    color: #E57F08;
-    text-shadow: 2px 1px 1px #1F1F1F;
-    font-size: 24px;
-    transition: transform 400ms;
-    text-align: center;
-    line-height: 190px
-}
 
 /* Footer */
 footer{
     margin-top : 100px;
     display: flex;
     flex-direction: column;
-    font-size: 21px;
+    font-size: 18px;
     color: #E57F08;
     text-align: center;
 }
 
-strong{
-  color: #E57F08;
+@media screen and (max-width: 780px){
+
+  .ul_header {
+    justify-content: space-around;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    flex-wrap: wrap;
+    gap: 20px;
+   
+  }
+
+  .li_header{
+    font-size: 18px;
+  }
+
+  footer{
+    font-size: 14px;
 }
+
+}
+
